# filters-cuda

./: .gitignore  CMakeLists.txt  README.md  bench.sh  compile.sh  config.sh  debug.sh  debug2.sh  debug3.sh  exec.sh  list.sh  log1.txt  log2.txt  plot.py  test.sh
benchmarks/: .gitignore
img_in/: .gitignore
img_out/: .gitignore
include/: conv_basic.h  conv_separable.h  conv_shared.h  conv_shared_sep.h  convolution.h  cudabench.h  cudadebug.h  debug.h  gamma.h  global.h  greyScale.h  sampling.h  window.h
src/: conv_basic.cu  conv_separable.cu  conv_shared.cu  conv_shared_sep.cu  convolution.cu  gamma.cu  greyScale.cu  main.cu  sampling.cu
